@@ -1618,6 +1618,8 @@ colors for the \*(CW, or for all windows.
 For details regarding this \*(CI \*(Xt 4d. COLOR Mapping.
 
 .P
+\ \ \fB^A\fR\ \ :\fIDisplay-Capabilities \fR         (Ctrl key + \[oq]a\[cq])
+.br
 \ \ \fB^G\fR\ \ :\fIDisplay-Control-Groups \fR       (Ctrl key + \[oq]g\[cq])
 .br
 \ \ \fB^K\fR\ \ :\fIDisplay-Cmdline \fR              (Ctrl key + \[oq]k\[cq])
